--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     },
     "homepage": "https://github.com/PharmaLedger-IMI/epi-theme/#readme",
     "dependencies": {
-        "octopus": "git+http://github.com/privatesky/octopus.git"
+        "octopus": "git+http://github.com/opendsu/octopus.git"
     }
 }
